--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,36 +95,83 @@ ul{
   float:left;
 }
 
+nav{
+  position:relative;
+}
+
 nav ul{
   margin: 0;
-  padding: 0;
-  float:right;
+  padding: 0; 
+  padding-bottom: 10px;
+  position: absolute;
+  background-color: white;
+  top: 48px;
+  left:0;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  // Media Queries
+    @include media($l) {
+      position:relative;
+      float:right;
+      width:auto;
+      top: 0;
+      background-color: transparent;
+      
+      box-shadow:none;
+      }
+}
+.menu_cta{
+  padding-right:110px;
 }
 
 nav ul li{
-  margin-left: 20px;
-  display: inline-block;
+  display: block;
+  text-align: center;
+  // Media Queries
+    @include media($l) {
+      display: inline-block;
+      margin-left: 20px;
+      text-align: left;
+                }
 }
 
 nav ul li a{
-  display:none;
   @include SerifPro(700, 1.5em, #0a0a0a);
   text-decoration: none; 
   line-height: 50px;
-  transition: 0.3s;
+  // transition: 0.3s;
   &:hover{
     color: #2951a7;
     text-decoration: none;
   }
 }
+.menu{
+  display: none;
+  // Media Queries
+    @include media($l) {
+      display: block;
+                }
+}
+.menu_icon{
+  width: 30px;
+  height: 24px;
+  background-color: green;
+  position: absolute;
+  right:20px;
+  margin-top: 11px;
+  display: block;
+  // Media Queries
+    @include media($l) {
+      display: none;
+                } 
+}
+
 #entitats_socials_link{
   margin-right: 20px; 
 }
-nav ul li:last-child {
-    display:none;
-  margin:0;
-  margin-right: 20px; 
-}
+// nav ul li:last-child {
+//   margin:0;
+// }
 .top-bar { 
 	margin: 0;
   width: 100%;
@@ -136,23 +183,43 @@ nav ul li:last-child {
   position: fixed;
   z-index: 99999;
 }
-.cta-menu{
-  height: 35px;
-  background-color: #2951a7;
-  border-radius: 2px;
-  @include opensans(600, 1.5em, #ffffff);
-  line-height: 35px;
-  margin: 0 auto;
-  text-align: center; 
-  text-decoration: none;
-  display: block;
-  padding: 0 10px 0 10px;
-  transition: 0.3s;
-  &:hover{
-    color: #7f8db4;
-    background-color: #23448d;
-  }
- }
+// .cta-menu{
+//   height: 35px;
+//   background-color: #2951a7;
+//   border-radius: 2px;
+//   @include opensans(600, 1.5em, #ffffff);
+//   line-height: 35px;
+//   margin: 0 auto;
+//   text-align: center; 
+//   text-decoration: none;
+//   display: block;
+//   padding: 0 10px 0 10px;
+//   transition: 0.3s;
+//   &:hover{
+//     color: #7f8db4;
+//     background-color: #23448d;
+//   }
+//  }
+.cta-contacte{
+    width:90px; 
+    height: 35px;
+    background-color: #2951a7;
+    @include opensans(600, 1.5em, #ffffff);
+    border-radius: 2px;
+    margin: 6px 50px 0 0;
+    text-decoration: none;
+    text-align: center; 
+    display:block;
+    padding: 7px 10px 0 10px;
+    position: absolute;
+    right: 10px;
+    transition: 0.3s; 
+    // Media Queries
+        @include media($l) {
+          display: none;
+          margin: 6px 10px 0 0;
+                    }
+}
 
 /* ==========================================================================
    Hero
@@ -206,10 +273,7 @@ nav ul li:last-child {
   display: block;
   width: 126px;
   transition: 0.3s;
-  &:hover{
-    color: #7f8db4;
-    background-color: #23448d;
-    // Media Queries
+  // Media Queries
     @include media($m) {
       display:block;
       height: 50px;
@@ -219,6 +283,9 @@ nav ul li:last-child {
       display: block;
       width: 126px;            
        }
+  &:hover{
+    color: #7f8db4;
+    background-color: #23448d;
   }
 }
 .hero{
