Ara amb el mixin de hdpi correcte per funcionar bé amb el nou CodeKit!!

--- a/sass/_hidpi.scss
+++ b/sass/_hidpi.scss
@@ -1,90 +1,4 @@
-// mixins
-
-
-
-// mixins
-
-//Max Width
-$max-width: 1280px;
-
-// Breakpoints
-$bp-medium: 48em; // 768px
-$bp-large: 64em; // 1024px
-$bp-xlarge: 90.1em; // 1441px
-$bp-xxlarge: 120em; // 1920px
-
-// Media Queries
-$m: min-width $bp-medium;
-$l: min-width $bp-large;
-$xl: min-width $bp-xlarge;
-$xxl: min-width $bp-xxlarge;
-
-
-
-
-// $blacky:#182a33;
-// $blaucel:#00AAD0;
-// $blaufosc:#487e99;
-// $blauhover:#8cc8df;
-// $lightgray:#f8f8f8;
-// $midgray:#b9bfc1;
-
-
-
-// @keyframes Gradient { 
-//     0%{background-position: 0% 0% }
-//     50%{background-position: 100% 100% }
-//     100%{background-position: 0% 0% }
-// }
-
-
-// @mixin animated-gradient {
-// 	// background: linear-gradient(316deg, #00586b, #00aad0);
-// 	background: linear-gradient(180deg, $blaucel, darken($blaucel, 5%) );
-// 	background-size: 400% 400%;
-// 	animation: Gradient 12s ease infinite;
-	
-// }
-
-
-
-@mixin smoothy{
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-@mixin opensans($weight, $size, $color:#0a0a0a) {
- font-family: 'Open Sans', Helvetica, sans-serif; 
- font-weight: $weight; 
- font-size: $size; 
- color:$color;
- @include smoothy;
-}
-@mixin SerifPro($weight, $size, $color:#333333) {
- font-family: 'Source Serif Pro', serif;  
- font-weight: $weight; 
- font-size: $size; 
- color:$color;
- @include smoothy;
-}
-
-
-
-@mixin border-box{
-    box-sizing: border-box;
-}
-
-@mixin no-space{
-    margin: 0;
-    padding: 0;
-}
-
-
-
-
-
-
-
+/*! HiDPI v2.0.1 | MIT License | git.io/hidpi */
 
 // Force HiDPI graphics on regular displays
 $hidpi-debug: false !default;
@@ -131,4 +45,3 @@ $hidpi-min-pixel-ratio: 1.3 !default;
     }
   }
 }
-
