--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700);
 @import 'reset';
-@import 'bourbon';
+@import "bourbon";
 @import 'grid-settings';
 @import 'neat';
 @import 'mixins';
@@ -299,7 +299,7 @@ nav ul li a{
 }
 .serveis-clients{
   @include outer-container;
-  padding: 0 10px;
+  padding: 0;
   // Media Queries
     @include media($m) {
       padding: 0 20px; 
